[package]
name = "capter-cli"
version = "0.1.0"
authors = ["Filip Stefansson <filip.stefansson@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ci_info = "0.13.2"
crossterm = "0.19.0"
clap = { version = "2.33.3", features = ["yaml"] }
globwalk = "0.8.1"
path-clean = "0.1.0"
ureq = { version = "2.0.1", features = ["json"] }

[dev-dependencies]
indoc = "1.0"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
