[package]
name = "capter"
version = "1.0.0-alpha.22"
authors = ["capter.io <filip@capter.io>"]
license = "MIT"
description = "Capter is a lightweight end-to-end testing tool for APIs."
readme = "README.md"
homepage = "https://capter.io"
repository = "https://github.com/capterqa/cli"
keywords = ["cli", "qa", "api"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".releaserc", ".capter", ".github"]
edition = "2018"

[[bin]]
name = "capter"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ci_info = "0.13.2"
crossterm = "0.19.0"
clap = { version = "2.33.3", features = ["yaml"] }
globwalk = "0.8.1"
path-clean = "0.1.0"
ureq = { version = "2.0.1", features = ["json"] }
last-git-commit = "0.2.0"
exitcode = "1.1.2"

[dev-dependencies]
indoc = "1.0"
mockito = "0.29.0"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
